--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^1.8.1",
     "canvas-confetti": "^1.9.3",
+    "lucide-vue-next": "^0.476.0",
     "vue": "^3.5.13"
   },
   "devDependencies": {
